Додає box-styles в index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,19 +13,23 @@
 <body>
     <!--Шапка сайту-->
     <header>
-        <nav>
-            <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-            <ul class="page-nav list">
-                <li> <a href="./index.html" class="page-nav-link">Студія</a></li>
-                <li> <a href="./portfolio.html" class="page-nav-link current">Портфоліо</a></li>
-                <li> <a href="" class="page-nav-link" >Контакти</a></li>
-            </ul>
-        </nav>
-        
-        <a href="mailto:info@devstudio.com" class="contacts" >info@devstudio.com</a>
-        <a href="tel:+380961111111" class="contacts" >+38 096 111 11 11</a>
-        
+        <div class="container header-field">
+            <nav class="header-field"> 
+                <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+                <ul class="page-nav list">
+                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link">Студія</a></li>
+                    <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link current">Портфоліо</a></li>
+                    <li class="page-nav-item"> <a href="" class="page-nav-link" >Контакти</a></li>
+                </ul>
+            </nav>
+
+            <div class="contacts">
+                <a href="mailto:info@devstudio.com" class="contact" >info@devstudio.com</a>
+                <a href="tel:+380961111111" class="contact" >+38 096 111 11 11</a>
+            </div>
+        </div>
     </header>
+
 
     <!--Унікальний контент-->
     <main>
