--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <!--Галерея-->
-        <section class="section">
+       
             <div class=" container">
                 <h2 class="title-section">Чим ми займаємося</h2>
                 <ul class="gallery list">
@@ -75,7 +73,7 @@
         <section class="section">
             <div class="container">
                 <h2 class="title-section team">Наша команда</h2>
-                <ul class="list">
+                <ul class="team-list list">
                     <li>
                         <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270">
                         <h3 class="team-title">Ігор Дем'яненко</h3>
@@ -105,12 +103,12 @@
     <!--Підвал сайту-->
     <footer class="footer">
         <div class="container ">
-            <a class="logo logo-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <a class="logo logo-footer" href="./index.html"><span class="logo-web">Web</span>Studio</a>
             <address>
-                <ul class="list">
-                 <li> <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" class="address map-link" target="_blank"  rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>  </li>
-                 <li> <a href="mailto:info@devstudio.com" class="address link-mail">info@devstudio.com</a> </li>
-                 <li> <a href="tel:+380961111111" class="address link-phone">+38 096 111 11 11</a> </li> 
+                <ul class="address-list list">
+                 <li class="address-item"> <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" class="address map-link" target="_blank"  rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>  </li>
+                 <li class="address-item"> <a href="mailto:info@devstudio.com" class="address link-mail">info@devstudio.com</a> </li>
+                 <li class="address-item"> <a href="tel:+380961111111" class="address link-phone">+38 096 111 11 11</a> </li> 
                 </ul> 
              </address>
         </div>
