--- a/portfolio.html
+++ b/portfolio.html
@@ -11,24 +11,24 @@
 </head>
 
 <body>
-    <!--Шапка сайту-->
-    <header>
-        <div class="container header-field">
-            <nav class="header-field"> 
-                <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-                <ul class="page-nav list">
-                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link">Студія</a></li>
-                    <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link current">Портфоліо</a></li>
-                    <li class="page-nav-item"> <a href="" class="page-nav-link" >Контакти</a></li>
-                </ul>
-            </nav>
+   <!--Шапка сайту-->
+   <header>
+    <div class="container header-field">
+        <nav class="header-field"> 
+            <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <ul class="page-nav list">
+                <li class="page-nav-item"> <a href="./index.html" class="page-nav-link current">Студія</a></li>
+                <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link">Портфоліо</a></li>
+                <li class="page-nav-item"> <a href="" class="page-nav-link" >Контакти</a></li>
+            </ul>
+        </nav>
 
-            <div class="contacts">
-                <a href="mailto:info@devstudio.com" class="contact" >info@devstudio.com</a>
-                <a href="tel:+380961111111" class="contact" >+38 096 111 11 11</a>
-            </div>
+        <div class="contacts">
+            <a href="mailto:info@devstudio.com" class="contact" >info@devstudio.com</a>
+            <a href="tel:+380961111111" class="contact" >+38 096 111 11 11</a>
         </div>
-    </header>
+    </div>
+</header>
 
 
     <!--Унікальний контент-->
@@ -59,15 +59,16 @@
 
     <!--Підвал сайту-->
     <footer class="footer">
-        <a class="logo logo-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-        <address>
-            <ul class="list">
-             <li> <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" class="address map-link" target="_blank"  rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>  </li>
-             <li> <a href="mailto:info@devstudio.com" class="address link-mail">info@devstudio.com</a> </li>
-             <li> <a href="tel:+380961111111" class="address link-phone">+38 096 111 11 11</a> </li> 
-            </ul> 
-         </address>
-
+        <div class="container ">
+            <a class="logo logo-footer" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+            <address>
+                <ul class="address-list list">
+                 <li class="address-item"> <a href="https://www.google.com/maps/d/viewer?mid=10uSM3H-mIU3GznYo2szRIEphczw&hl=en_US&ll=50.42732700000001%2C30.538092&z=17" class="address map-link" target="_blank"  rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>  </li>
+                 <li class="address-item"> <a href="mailto:info@devstudio.com" class="address link-mail">info@devstudio.com</a> </li>
+                 <li class="address-item"> <a href="tel:+380961111111" class="address link-phone">+38 096 111 11 11</a> </li> 
+                </ul> 
+             </address>
+        </div>
     </footer>
 
 </body>
