--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <!--Шапка сайту-->
-    <header>
+    <header class="header">
         <div class="container header-field">
             <nav class="header-field"> 
-                <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+              <div class="header-logo"> <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+              </div>
                 <ul class="page-nav list">
                     <li class="page-nav-item"> <a href="./index.html" class="page-nav-link current">Студія</a></li>
                     <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link">Портфоліо</a></li>
@@ -22,7 +23,7 @@
                 </ul>
             </nav>
 
-            <div class="contacts">
+            <div>
                 <a href="mailto:info@devstudio.com" class="contact" >info@devstudio.com</a>
                 <a href="tel:+380961111111" class="contact" >+38 096 111 11 11</a>
             </div>
