--- a/portfolio.html
+++ b/portfolio.html
@@ -11,54 +11,57 @@
 </head>
 
 <body>
-   <!--Шапка сайту-->
-   <header>
-    <div class="container header-field">
-        <nav class="header-field"> 
-            <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-            <ul class="page-nav list">
-                <li class="page-nav-item"> <a href="./index.html" class="page-nav-link current">Студія</a></li>
-                <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link">Портфоліо</a></li>
-                <li class="page-nav-item"> <a href="" class="page-nav-link" >Контакти</a></li>
-            </ul>
-        </nav>
+     <!--Шапка сайту-->
+     <header class="header">
+        <div class="container header-field">
+            <nav class="header-field"> 
+              <div class="header-logo"> <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+              </div>
+                <ul class="page-nav list">
+                    <li class="page-nav-item"> <a href="./index.html" class="page-nav-link current">Студія</a></li>
+                    <li class="page-nav-item"> <a href="./portfolio.html" class="page-nav-link">Портфоліо</a></li>
+                    <li class="page-nav-item"> <a href="" class="page-nav-link" >Контакти</a></li>
+                </ul>
+            </nav>
 
-        <div class="contacts">
-            <a href="mailto:info@devstudio.com" class="contact" >info@devstudio.com</a>
-            <a href="tel:+380961111111" class="contact" >+38 096 111 11 11</a>
+            <div>
+                <a href="mailto:info@devstudio.com" class="contact" >info@devstudio.com</a>
+                <a href="tel:+380961111111" class="contact" >+38 096 111 11 11</a>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
 
 
     <!--Унікальний контент-->
     <main>
-        <section>
-            <h1 class="hide">Портфоліо</h1>
-            <ul class="list filter">
-                <li><button class="filter-btn" type="button">Усі</button></li>
-                <li><button class="filter-btn" type="button">Веб-сайти</button></li>
-                <li><button class="filter-btn" type="button">Додатки</button></li>
-                <li><button class="filter-btn" type="button">Дизайн</button></li>
-                <li><button class="filter-btn" type="button">Маркетинг</button></li>
-            </ul>
-
-            <ul class=" list portfolio">
-                <li><a href="" class="portfolio-link"><img src="images/project1.jpg" alt="Технокряк" width="370"><h2 class="portfolio-title">Технокряк</h2><p class="portfolio-text" >Веб-сайт</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2><p class="portfolio-text" >Дизайн</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project3.jpg" alt="Ресторан Seafood" width="370"><h2 class="portfolio-title">Ресторан Seafood</h2><p class="portfolio-text" >Додаток</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project4.jpg" alt="Проєкт Prime" width="370"><h2 class="portfolio-title">Проєкт Prime</h2><p class="portfolio-text">Маркетинг</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project5.jpg" alt="Проєкт Boxes" width="370"><h2 class="portfolio-title">Проєкт Boxes</h2><p class="portfolio-text">Додаток</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project6.jpg" alt="Inspiration has no Borders" width="370"><h2 class="portfolio-title">Inspiration has no Borders</h2><p class="portfolio-text">Веб-сайт</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project7.jpg" alt="Видання Limited Edition" width="370"><h2 class="portfolio-title">Видання Limited Edition</h2><p class="portfolio-text">Дизайн</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project8.jpg" alt="Проєкт LAB" width="370"><h2 class="portfolio-title">Проєкт LAB</h2><p class="portfolio-text" >Маркетинг</p></a></li>
-                <li><a href="" class="portfolio-link"><img src="images/project9.jpg" alt="Growing Business" width="370"><h2 class="portfolio-title">Growing Business</h2><p class="portfolio-text">Додаток</p></a></li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h1 class="hide">Портфоліо</h1>
+                <ul class="list filter">
+                    <li class="filter-item"><button class="filter-btn" type="button">Усі</button></li>
+                    <li class="filter-item"><button class="filter-btn" type="button">Веб-сайти</button></li>
+                    <li class="filter-item"><button class="filter-btn" type="button">Додатки</button></li>
+                    <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button></li>
+                    <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button></li>
+                </ul>
+    
+                <ul class=" list portfolio">
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project1.jpg" alt="Технокряк" width="370"><h2 class="portfolio-title">Технокряк</h2><p class="portfolio-text" >Веб-сайт</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2><p class="portfolio-text" >Дизайн</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project3.jpg" alt="Ресторан Seafood" width="370"><h2 class="portfolio-title">Ресторан Seafood</h2><p class="portfolio-text" >Додаток</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project4.jpg" alt="Проєкт Prime" width="370"><h2 class="portfolio-title">Проєкт Prime</h2><p class="portfolio-text">Маркетинг</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project5.jpg" alt="Проєкт Boxes" width="370"><h2 class="portfolio-title">Проєкт Boxes</h2><p class="portfolio-text">Додаток</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project6.jpg" alt="Inspiration has no Borders" width="370"><h2 class="portfolio-title">Inspiration has no Borders</h2><p class="portfolio-text">Веб-сайт</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project7.jpg" alt="Видання Limited Edition" width="370"><h2 class="portfolio-title">Видання Limited Edition</h2><p class="portfolio-text">Дизайн</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project8.jpg" alt="Проєкт LAB" width="370"><h2 class="portfolio-title">Проєкт LAB</h2><p class="portfolio-text" >Маркетинг</p></a></li>
+                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project9.jpg" alt="Growing Business" width="370"><h2 class="portfolio-title">Growing Business</h2><p class="portfolio-text">Додаток</p></a></li>
+                </ul>
+            </div>
         </section>
     </main>
 
-    <!--Підвал сайту-->
-    <footer class="footer">
+     <!--Підвал сайту-->
+     <footer class="footer">
         <div class="container ">
             <a class="logo logo-footer" href="./index.html"><span class="logo-web">Web</span>Studio</a>
             <address>
