--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
             <div class="container">
                 <h2 class="title-section team">Наша команда</h2>
                 <ul class="team-list list">
-                    <li>
+                    <li class="team-item">
                         <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270">
                         <h3 class="team-title">Ігор Дем'яненко</h3>
                         <p class="team-text" >Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="images/olha.jpg" alt="Ольга Рєпіна" width="270">
                         <h3 class="team-title">Ольга Рєпіна</h3>
                         <p class="team-text">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="images/mykola.jpg" alt="Микола Тарасов" width="270">
                         <h3 class="team-title">Микола Тарасов</h3>
                         <p class="team-text">Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="images/mykhailo.jpg" alt="Михайло Єрмаков" width="270">
                         <h3 class="team-title">Михайло Єрмаков</h3>
                         <p class="team-text">UI Designer</p>
