--- a/portfolio.html
+++ b/portfolio.html
@@ -46,15 +46,15 @@
                 </ul>
     
                 <ul class=" list portfolio">
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project1.jpg" alt="Технокряк" width="370"><h2 class="portfolio-title">Технокряк</h2><p class="portfolio-text" >Веб-сайт</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2><p class="portfolio-text" >Дизайн</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project3.jpg" alt="Ресторан Seafood" width="370"><h2 class="portfolio-title">Ресторан Seafood</h2><p class="portfolio-text" >Додаток</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project4.jpg" alt="Проєкт Prime" width="370"><h2 class="portfolio-title">Проєкт Prime</h2><p class="portfolio-text">Маркетинг</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project5.jpg" alt="Проєкт Boxes" width="370"><h2 class="portfolio-title">Проєкт Boxes</h2><p class="portfolio-text">Додаток</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project6.jpg" alt="Inspiration has no Borders" width="370"><h2 class="portfolio-title">Inspiration has no Borders</h2><p class="portfolio-text">Веб-сайт</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project7.jpg" alt="Видання Limited Edition" width="370"><h2 class="portfolio-title">Видання Limited Edition</h2><p class="portfolio-text">Дизайн</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project8.jpg" alt="Проєкт LAB" width="370"><h2 class="portfolio-title">Проєкт LAB</h2><p class="portfolio-text" >Маркетинг</p></a></li>
-                    <li class="portfolio-item"><a href="" class="portfolio-link"><img src="images/project9.jpg" alt="Growing Business" width="370"><h2 class="portfolio-title">Growing Business</h2><p class="portfolio-text">Додаток</p></a></li>
+                    <li class="portfolio-item"><img src="images/project1.jpg" alt="Технокряк" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Технокряк</h2><p class="portfolio-text">Веб-сайт</p></a></li>
+                    <li class="portfolio-item"><img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2><p class="portfolio-text" >Дизайн</p></a></li>
+                    <li class="portfolio-item"><img src="images/project3.jpg" alt="Ресторан Seafood" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Ресторан Seafood</h2><p class="portfolio-text" >Додаток</p></a></li>
+                    <li class="portfolio-item"><img src="images/project4.jpg" alt="Проєкт Prime" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Проєкт Prime</h2><p class="portfolio-text">Маркетинг</p></a></li>
+                    <li class="portfolio-item"><img src="images/project5.jpg" alt="Проєкт Boxes" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Проєкт Boxes</h2><p class="portfolio-text">Додаток</p></a></li>
+                    <li class="portfolio-item"><img src="images/project6.jpg" alt="Inspiration has no Borders" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Inspiration has no Borders</h2><p class="portfolio-text">Веб-сайт</p></a></li>
+                    <li class="portfolio-item"><img src="images/project7.jpg" alt="Видання Limited Edition" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Видання Limited Edition</h2><p class="portfolio-text">Дизайн</p></a></li>
+                    <li class="portfolio-item"><img src="images/project8.jpg" alt="Проєкт LAB" width="370" class="portfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Проєкт LAB</h2><p class="portfolio-text" >Маркетинг</p></a></li>
+                    <li class="portfolio-item"><img src="images/project9.jpg" alt="Growing Business" width="370" class="potfolio-img"><a href="" class="portfolio-link"><h2 class="portfolio-title">Growing Business</h2><p class="portfolio-text">Додаток</p></a></li>
                 </ul>
             </div>
         </section>
