--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,7 +60,8 @@
                     </li>
                 </ul>
             </div>
-       
+        </section>
+        <section class="section gallery-section">
             <div class=" container">
                 <h2 class="title-section">Чим ми займаємося</h2>
                 <ul class="gallery list">
@@ -70,6 +71,7 @@
                 </ul>
             </div>
         </section>
+       
         <!--Команда-->
         <section class="section">
             <div class="container">
