--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
     
                 <ul class=" list portfolio">
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project1.jpg" alt="Технокряк" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Технокряк</h2>
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project3.jpg" alt="Ресторан Seafood" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -74,7 +74,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project4.jpg" alt="Проєкт Prime" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Проєкт Prime</h2>
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project5.jpg" alt="Проєкт Boxes" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Проєкт Boxes</h2>
@@ -92,7 +92,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project6.jpg" alt="Inspiration has no Borders" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -101,7 +101,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project7.jpg" alt="Видання Limited Edition" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Видання Limited Edition</h2>
@@ -110,7 +110,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project8.jpg" alt="Проєкт LAB" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Проєкт LAB</h2>
@@ -119,7 +119,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="#" class="portfolio-link">
+                        <a href="#" class="portfolio-link" target="_blank" rel="noreferrer noopener" >
                             <img src="images/project9.jpg" alt="Growing Business" width="370" class="portfolio-img">
                             <div class="portfolio-field-text">
                                 <h2 class="portfolio-title">Growing Business</h2>
